--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
     flex-direction: row;
     background-color: #ffffff;
     background-image: url('./fried-chicken-img.png');
-    background-size: 90%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: right center;
@@ -38,7 +38,8 @@ body{
     display: grid;
     grid-template-columns: repeat(1, minmax(300px, 300px));
     gap: 1rem;
-    margin-bottom: 30PX;
+    margin-top: 30PX;
+    margin-bottom: 50PX;
     /* width: 90%; */
     /* place-items: center; */
     /* background-color: #ffffff; */
@@ -57,8 +58,8 @@ body{
     align-items: center;
     flex-direction: column;
   }
-  .mainSection h1{
-    margin-bottom: 50px;
+  .mainSection h1, .mainSection h2{
+    text-align: center;
   }
   ul{
     padding: 0;
@@ -68,6 +69,12 @@ body{
   }
   h4{
     color: #adaaaa;
+  }
+  .rateColor{
+    color: #C22D2C;
+  }
+  label{
+    margin-top: 30px;
   }
   .AddButton{
     background-color: #0275FF;
@@ -140,12 +147,6 @@ body{
     flex-wrap: wrap;
     flex-direction: row;
     background-color: #ffffff;
-    /* background-image: url('./top-view.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right center; */
-    
   }
   
   
@@ -154,9 +155,9 @@ body{
       grid-column-end: span 6;
     }
     .header{
-      height: 90vh;
+      height: 80vh;
       background-image: url('./fried-chicken-img2.png');
-      background-size:80%;
+      background-size:90%;
       align-items:normal;
       /* border: 1px solid red; */
     }
