create fried chicken restaurants guide/more features

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,9 @@ body{
     border-bottom: #0062ff 1px solid;
    
   }
+  .grid input::placeholder {
+    opacity: 0.4;
+  }
   .mainSection{
     margin: 10%;
     display: flex;
