--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,11 @@
 .form-img {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* border: 1px solid; */
-    /* background-image: url(./bg.png);
-    background-repeat: none; */
 }
 
 form {
     display: grid;
     grid-template-columns: 1fr;
-    /* width: 50%; */
-    /* border: 1px solid #c1bfbf; */
-    /* padding: 10px; */
     text-align: start;
     font-weight: bold;
     margin: 50px;
@@ -33,7 +27,6 @@ form {
 
 form input {
     width: 80%;
-    /* margin: 10px 0px; */
     height: 30px;
     border: 1px solid #c1bfbf;
     border-radius: 5px;
@@ -50,15 +43,42 @@ form button {
     cursor: pointer;
 }
 
+.rate {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 10px;
+}
+
+.rate-display {
+    font-size: 24px;
+    margin-left: 20px;
+}
+
+input[type='range'] {
+    appearance: none;
+    width: 100%;
+    height: 20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 0;
+    cursor: pointer;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #d42636;
+    cursor: pointer;
+}
+
 .main-div {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* border: 1px solid; */
-    /* text-align: center; */
 }
 
 .res-details {
-    /* width: 30%; */
     margin: 20px 10px;
     padding: 10px;
     border: 1px solid rgb(71, 1, 1);
