--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ body{
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    color: #86BF0B;
+
     
 }
 
@@ -66,4 +68,58 @@ body{
        flex-direction: column;
     }
     
+}
+
+.infos{
+    background-color: blue;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    height: 500px;
+    margin-top: 80px;
+    width: 50%;
+    margin-left: 350px;
+    border-radius: 10px;
+    text-align: left;
+}
+.description{
+    background-color: white;
+    color:#592F25;
+    width: 350px;
+    height: 400px;
+    text-align: center;
+    border-radius: 10px;
+
+}
+.description h3{
+    margin-top: 50px;
+    font-size: 1.8rem;
+    
+}
+
+.infos p{
+    color: white;
+    font-size: 1.5rem;
+    padding: 10px;
+}
+.infos h3{
+    text-decoration: underline;
+}
+.infos .desc{
+    font-weight: bold;
+    text-align: center;
+    font-style: italic;
+}
+
+.infos button{
+    margin-top: 20px;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #86BF0B;  
+}
+.link{
+    text-decoration: none;
+    color: #86BF0B;
 }
