--- a/src/App.css
+++ b/src/App.css
@@ -1,111 +1,205 @@
+.App {
+  font-family: Arial, Helvetica, sans-serif;
+}
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: #1b0b01;
+}
+.nav{
+  height: 4vh;
+  background-color: #1b0b01;
+  color:#ffd59e;
+  display: flex;
+  padding: 1% 2%;
 
-.App{
-    font-family:Arial, Helvetica, sans-serif;
+}
+.nav h1{
+
+  margin: 0;
+}
+.in{
+  font-weight: 900;
+  color:#ed5025
 }
 
+.cover {
+  width: 100%;
+  /* height: 1; */
+  /* position: absolute; */
+}
+.cover img {
+  width: 100%;
+  height: 88vh;
+  object-fit: cover;
+}
+
+.motto {
+  background-color: #1b0b01;
+  height: 90vh;
+  display: flex;
+  color: #ffd59e;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.motto h1 {
+  font-size: 50px;
+  padding: 0 15%;
+  text-align: center;
+  text-wrap: wrap;
+  font-weight: 900;
+}
+.motto p {
+  font-size: 25px;
+  font-weight: 100;
+  font-style: italic;
+}
+.motto img {
+  /* width: 50px; */
+  height: 25%;
+  margin-top: 3%;
+}
+
+button {
+  padding: 8px 12px;
+  margin-right: 8px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.form-section {
+  height: 90vh;
+  background-color: #864135;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #1b0b01;
+}
+.form-section h1 {
+  font-size: 40px;
+}
 /* styles.css */
 
-.restaurant {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid #ccc;
-    padding: 16px;
-    margin-bottom: 16px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-
-  }
-  
-  .name-loc {
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  h2 {
-    margin: 0;
-    font-size: 20px;
-  }
-  
-  h3 {
-    margin: 0;
-    font-size: 16px;
-    color: #666;
-  }
-  
-  button {
-    padding: 8px 12px;
-    margin-right: 8px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-
-
-  /* styles.css */
-
 .restaurant-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin-bottom: 30px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 6px;
-    font-weight: bold;
-  }
-  
-  input {
-    width: 95%;
-    padding: 12px 12px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    padding: 10px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  .rate{
-    display: block;
-    justify-content: center;
-    align-items: center;
-  }
+  /* max-width: 400px; */
+  width: 40%;
+  margin: 0 auto;
+  padding: 20px;
+  /* border: 1px solid #ccc; */
+  border-radius: 8px;
+  margin-bottom: 30px;
+  text-align: left;
+}
 
- 
-  .title-loc{
-    height: 20vh;
-    background-color: #0056b3;
-    color:white;
-    border-radius: 40px;
-  }
+label {
+  display: block;
+  margin-bottom: 6px;
+  font-weight: bold;
+}
 
-  .details{
-    height: 80vh;
-    margin-top: 1%;
-    border-radius: 40px;
-    background-color: #4898ee;
-    color:white
-  }
+input {
+  width: 95%;
+  padding: 12px 12px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+button {
+  /* padding: 10px 16px; */
+  background-color: #fbd444;
+  color: #1b0b01;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 150px;
+  height: 5vh;
+  font-size: 15px;
+  transition: background-color 0.2s ease;
+}
+
+button:hover {
+  background-color: #fcd95b;
+}
+.resturants {
+  display: flex;
+  background-color: #FFD59E;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 5% 5%;
+}
+
+.restaurant {
+  background-color: #1b0b01;
+  color: #ccc;
+  width: 300px;
+  height: 55vh;
+  margin-top: 10%;
+  border-radius: 20px;
+  border: 3px solid #1b0b01;
+  
+}
+
+.restaurant img {
+  border-radius: 20px 20px 0 0;
+  height: 55%;
+  width: 100%;
+}
+.name-del {
+  display: flex;
+  align-items:center;
+  justify-content: space-around;
+}
+
+.name-del img {
+  width: 25px;
+}
+.name-loc{
+  color:white;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+
+}
+
+.rate{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.res-details{
+  background-color: #ffebe8;
+  height: 90vh;
+  margin: 3% 5%;
+  display: flex;
+  gap:5%;
+  border-radius: 20px;
+}
+
+.res-details img{
+  width: 60%;
+  border-radius: 20px;
+}
+.res-info h1{
+  font-size: 50px;
+}
+.res-info{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+
+}
